# HistogramEqualization

./: README.md  szumiaTask1.doc
HistogramEqualization/: CMakeLists.txt  Column.cpp  Column.h  main.cpp
